Rename send to sendToFilenet
- Preparation for separate method for only sending to SFTP

[#182087322]